played around with css to optimize spacing, long link still has issues

--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -2,4 +2,5 @@
   width: 30%;
   margin: auto;
   text-align: left;
+  list-style-type: none;
 }
