--- a/src/components/TimelineEvent.css
+++ b/src/components/TimelineEvent.css
@@ -4,6 +4,7 @@
   padding: 0.5rem;
   border-bottom: 1px solid #E6ECF0;
   background-color: #FFF;
+  list-style-type: none;
 }
 
 .timeline-event:hover {
